[gd_scene load_steps=68 format=2]

[ext_resource path="res://resources/textures/hand_idle_coin.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/flick.tres" type="AudioStream" id=3]
[ext_resource path="res://resources/sounds/catchCheer.tres" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/miss.tres" type="AudioStream" id=5]
[ext_resource path="res://beat.gd" type="Script" id=6]
[ext_resource path="res://resources/sounds/cowbell1.tres" type="AudioStream" id=7]
[ext_resource path="res://resources/sounds/cowbell2.tres" type="AudioStream" id=8]
[ext_resource path="res://resources/sounds/right.tres" type="AudioStream" id=9]
[ext_resource path="res://resources/sounds/down.tres" type="AudioStream" id=10]
[ext_resource path="res://resources/sounds/up.tres" type="AudioStream" id=11]
[ext_resource path="res://resources/textures/hand_throw_1.png" type="Texture" id=12]
[ext_resource path="res://resources/textures/hand_throw_2.png" type="Texture" id=13]
[ext_resource path="res://resources/textures/hand_catch_2.png" type="Texture" id=14]
[ext_resource path="res://resources/textures/hand_catch_5.png" type="Texture" id=15]
[ext_resource path="res://resources/textures/hand_catch_1.png" type="Texture" id=16]
[ext_resource path="res://resources/textures/hand_catch_4.png" type="Texture" id=17]
[ext_resource path="res://resources/textures/hand_catch_3.png" type="Texture" id=18]
[ext_resource path="res://Hand.gd" type="Script" id=19]
[ext_resource path="res://resources/textures/screen.png" type="Texture" id=20]
[ext_resource path="res://resources/textures/Screen/2b.png" type="Texture" id=21]
[ext_resource path="res://resources/textures/Screen/3b.png" type="Texture" id=22]
[ext_resource path="res://resources/textures/Screen/0b.png" type="Texture" id=23]
[ext_resource path="res://resources/textures/Screen/1b.png" type="Texture" id=24]
[ext_resource path="res://Screen.gd" type="Script" id=25]
[ext_resource path="res://resources/textures/Screen/6s.png" type="Texture" id=26]
[ext_resource path="res://resources/textures/Screen/8s.png" type="Texture" id=27]
[ext_resource path="res://resources/textures/Screen/9s.png" type="Texture" id=28]
[ext_resource path="res://resources/textures/Screen/0s.png" type="Texture" id=29]
[ext_resource path="res://resources/textures/Screen/5s.png" type="Texture" id=30]
[ext_resource path="res://resources/textures/Screen/7s.png" type="Texture" id=31]
[ext_resource path="res://resources/textures/Screen/4s.png" type="Texture" id=32]
[ext_resource path="res://resources/textures/Screen/3s.png" type="Texture" id=33]
[ext_resource path="res://resources/textures/Screen/1s.png" type="Texture" id=34]
[ext_resource path="res://resources/textures/Screen/2s.png" type="Texture" id=35]
[ext_resource path="res://resources/textures/woosh.png" type="Texture" id=36]
[ext_resource path="res://resources/textures/impact.png" type="Texture" id=37]
[ext_resource path="res://resources/textures/hand_fail.png" type="Texture" id=38]
[ext_resource path="res://Catch.gd" type="Script" id=39]
[ext_resource path="res://resources/textures/Score/9.png" type="Texture" id=40]
[ext_resource path="res://resources/textures/Score/0.png" type="Texture" id=41]
[ext_resource path="res://resources/textures/Score/1.png" type="Texture" id=42]
[ext_resource path="res://resources/textures/Score/2.png" type="Texture" id=43]
[ext_resource path="res://resources/textures/scoreBox.png" type="Texture" id=44]
[ext_resource path="res://resources/textures/Score/4.png" type="Texture" id=45]
[ext_resource path="res://resources/textures/Score/5.png" type="Texture" id=46]
[ext_resource path="res://resources/textures/Score/3.png" type="Texture" id=47]
[ext_resource path="res://resources/textures/Score/8.png" type="Texture" id=48]
[ext_resource path="res://resources/textures/Score/6.png" type="Texture" id=49]
[ext_resource path="res://resources/textures/Score/7.png" type="Texture" id=50]
[ext_resource path="res://ScoreBox.gd" type="Script" id=51]
[ext_resource path="res://resources/textures/hand_search.png" type="Texture" id=52]
[ext_resource path="res://resources/textures/coin1.png" type="Texture" id=53]
[ext_resource path="res://CoinFail.gd" type="Script" id=54]
[ext_resource path="res://resources/sounds/laughtrack1.wav" type="AudioStream" id=55]
[ext_resource path="res://resources/sounds/laughtrack4.wav" type="AudioStream" id=56]
[ext_resource path="res://resources/sounds/laughtrack3.wav" type="AudioStream" id=57]
[ext_resource path="res://resources/sounds/laughtrack2.wav" type="AudioStream" id=58]
[ext_resource path="res://resources/sounds/catch.tres" type="AudioStream" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ) ],
"loop": true,
"name": "search",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "startCatch",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "failCatch",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": false,
"name": "catch",
"speed": 60.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "throw",
"speed": 60.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Fail"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 142, 179 ), Vector2( 142, 184 ), Vector2( 142, 179 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Search"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 142, 179 ), Vector2( 142, 350 ), Vector2( 142, 179 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fall"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 88.3344, -0.25, 0, 0.25, 0, 69.6144, -0.33, 9.65558, 0.06, -9.20855, 60, -0.22, 1.22972, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 156.583, -0.25, 0, 0.25, 0, 130.404, -0.25, 0, 0.25, 0, 267.404, -0.23, -96, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "8",
"speed": 5.0
} ]

[sub_resource type="BitmapFont" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "8",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Hand" type="AnimatedSprite" parent="."]
position = Vector2( 142, 179 )
frames = SubResource( 1 )
animation = "idle"
script = ExtResource( 19 )

[node name="Woosh" type="Sprite" parent="Hand"]
visible = false
position = Vector2( -44.0373, -100.064 )
texture = ExtResource( 36 )

[node name="Impact" type="Sprite" parent="Hand"]
visible = false
position = Vector2( -56, -39 )
texture = ExtResource( 37 )

[node name="Animations" type="AnimationPlayer" parent="Hand"]
playback_speed = 2.0
anims/Fail = SubResource( 2 )
anims/Search = SubResource( 3 )

[node name="Coin" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 94.5674, 1.12246 )
stream = ExtResource( 3 )

[node name="beat" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 94.6673, 0.684345 )
script = ExtResource( 6 )
cowbell = ExtResource( 7 )
cowbell2 = ExtResource( 8 )
up = ExtResource( 11 )
down = ExtResource( 10 )
right = ExtResource( 9 )
laugh1 = ExtResource( 55 )
laugh2 = ExtResource( 58 )
laugh3 = ExtResource( 57 )
laugh4 = ExtResource( 56 )

[node name="Catch" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 94.2922, 0 )
stream = ExtResource( 4 )
script = ExtResource( 39 )
catch = ExtResource( 59 )
catch_cheer = ExtResource( 4 )
fail = ExtResource( 5 )

[node name="CoinFail" type="Sprite" parent="."]
visible = false
position = Vector2( 60.9744, 267.404 )
rotation = 6.28319
texture = ExtResource( 53 )
script = ExtResource( 54 )

[node name="Animation" type="AnimationPlayer" parent="CoinFail"]
anims/Fall = SubResource( 4 )

[node name="Screen" type="Sprite" parent="."]
position = Vector2( 33.371, 227.59 )
texture = ExtResource( 20 )
script = ExtResource( 25 )

[node name="Big Number" type="AnimatedSprite" parent="Screen"]
position = Vector2( -14.1218, -0.891922 )
frames = SubResource( 5 )
animation = "0"

[node name="Tenth" type="AnimatedSprite" parent="Screen"]
position = Vector2( 5.79084, 7.01582 )
frames = SubResource( 6 )
animation = "0"

[node name="Units" type="AnimatedSprite" parent="Screen"]
position = Vector2( 17.2508, 7.09825 )
frames = SubResource( 6 )
animation = "0"

[node name="ScoreBox" type="Sprite" parent="."]
position = Vector2( 164.44, 22.4492 )
texture = ExtResource( 44 )
script = ExtResource( 51 )

[node name="Record" type="Label" parent="ScoreBox"]
margin_left = -41.7618
margin_top = 19.3743
margin_right = 18.2382
margin_bottom = 33.3743
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Record: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreBox"]
margin_left = 131.482
margin_top = 12.681
margin_right = 171.482
margin_bottom = 26.681
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tenth" type="AnimatedSprite" parent="ScoreBox"]
visible = false
position = Vector2( -6, 0 )
frames = SubResource( 8 )
animation = "1"

[node name="Units" type="AnimatedSprite" parent="ScoreBox"]
frames = SubResource( 8 )
animation = "0"

[node name="Effect" type="Label" parent="."]
visible = false
margin_left = 2.22725
margin_top = 3.11814
margin_right = 61.2272
margin_bottom = 17.1181
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "WAITING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0.707123, 511.945 )
color = Color( 0.811765, 0.588235, 0, 1 )
polygon = PoolVector2Array( -4.16833, -256.07, 198.828, -255.611, 206.642, -215.19, 219.971, -80.7856, 99.1922, -97.737, -18.9379, -87.6721 )

[node name="EffectQuestion" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EffectQuestion"]
margin_left = 20.0
margin_top = 7.0
margin_right = 61.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Effects?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="catch" from="." to="Screen" method="_on_Game_catch"]
[connection signal="catch" from="." to="Catch" method="_on_Game_catch"]
[connection signal="catch" from="." to="ScoreBox" method="_on_Game_catch"]
[connection signal="catch" from="." to="Hand" method="_on_Game_catch"]
[connection signal="catch_fail" from="." to="CoinFail" method="_on_Game_catch_fail"]
[connection signal="catch_fail" from="." to="Catch" method="_on_Game_catch_fail"]
[connection signal="catch_fail" from="." to="Hand" method="_on_Game_catch_fail"]
[connection signal="throw" from="." to="Screen" method="_on_Game_throw"]
[connection signal="throw" from="." to="Hand" method="_on_Game_throw"]
[connection signal="animation_finished" from="Hand/Animations" to="ScoreBox" method="_on_Animations_animation_finished"]
[connection signal="animation_finished" from="Hand/Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="changeTheme" from="beat" to="Catch" method="_on_beat_changeTheme"]
[connection signal="animation_finished" from="CoinFail/Animation" to="CoinFail" method="_on_Animation_animation_finished"]
[connection signal="toggled" from="EffectQuestion" to="." method="_on_EffectQuestion_toggled"]
